k8s/deployments/navigator/data-m10/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iblapi
spec:
  selector:
    matchLabels:
      run: ibl-navigator-flask
  replicas: 1
  template:
    metadata:
      labels:
        run: ibl-navigator-flask
        app: iblapi
    spec:
      containers:
        - name: iblapi
          image: registry.vathes.com/ibl-navigator/iblapi:v0.2.1-public
          command: ["/src/iblapi/run-ibl-api.prod.sh"]
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 600m
              memory: 1Gi
            limits:
              cpu: 600m
              memory: 1Gi
      imagePullSecrets:
        - name: external-registry-creds
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibl-frontend
spec:
  selector:
    matchLabels:
      run: ibl-navigator-frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: ibl-navigator-frontend
        app: ibl-frontend
    spec:
      containers:
        - name: ibl-frontend
          image: registry.vathes.com/ibl-navigator/frontend:v0.2.6-public
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi 
            limits:
              cpu: 100m
              memory: 100Mi
      imagePullSecrets:
        - name: external-registry-creds
...
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibl-node-server
spec:
  selector:
    matchLabels:
      run: ibl-navigator-node
  replicas: 1
  template:
    metadata:
      labels:
        run: ibl-navigator-node
        app: ibl-node-server
    spec:
      containers:
        - name: ibl-node-server
          image: registry.vathes.com/ibl-navigator/node-server:v0.2.1-public
          ports:
            - containerPort: 3333
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 100m
              memory: 1Gi
      imagePullSecrets:
        - name: external-registry-creds
...
